# rubberband-python

./: .gitignore  README.md  meson.build  pyproject.toml  rubberband_python.c  rubberband_python.py  test_rubberband_python.py
.github/workflows/: build.yml  build_lib.yml  test.yml
rubberband_python/: _c.c  meson.build
src/: __init__.py  _c.c
subprojects/: rubberband.wrap
