[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'rubberband-python'
version = '0.0.1'
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.meson-python.args]
install = ['--tags=runtime,python-runtime']
setup = ['--vsenv']
compile = ['-v']
